Update vignette with tidy_cols().

--- a/vignettes/gread-vignette.Rmd
+++ b/vignettes/gread-vignette.Rmd
@@ -93,7 +93,7 @@ class(bam)
 arguments specific to that particular format. See `?<function_name>` for more 
 details.
 
-* By default, the argument `tidy` is `TRUE`. This argument prepares the data 
+* By default, the argument `tidy_cols` is `TRUE`. This argument prepares the data 
 in a format that's *ready-to-use*. For example, `read_gff` and `read_gtf` 
 tidies the *attributes* column to separate columns with meaningful names.
 
@@ -132,19 +132,19 @@ sufficient in most cases.
 * The function recognises the file format automatically with proper defaults. 
 So for most cases with default scenarios, this is quite useful.
 
-## The `tidy()` function
+## The `tidy_cols()` function
 
 In case the default tidying removes columns that you'd like to retain, you 
-can set `tidy=FALSE` first while loading the files using the function(s) 
-shown above, and then use the function `tidy()` to remove just the columns you 
-don't need using the `remove_cols` argument.
+can set `tidy_cols=FALSE` first while loading the files using the function(s) 
+shown above, and then use the function `tidy_cols()` to remove just the 
+columns you don't need using the `remove_cols` argument.
 
 ```{r}
-(gtf = read_format("sample.gtf", tidy=FALSE))
+(gtf = read_format("sample.gtf", tidy_cols=FALSE))
 
 ## each column of attributes will become a column while tidying up
 ## retain all attributes except transcript_id and attributes
-tidy(gtf, remove_cols = c("tss_id", "attributes"))[]
+tidy_cols(gtf, remove_cols = c("tss_id", "attributes"))[]
 ```
 
 The input object `gtf` is updated *by reference*. There is therefore no need 
